--- a/tiny_mrp/mrp/templates/mrp/purchase/createReq.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/createReq.html
@@ -32,7 +32,7 @@
      <div class="row">
         <div class="col-md-6">
             درخواست دهنده
-            <select class="form-control" name="requested_user">
+            <select class="form-control" name="requested_user" id="requested_user">
                 {% for i in users %}
                 <option value="{{i.id}}">{{i}}</option>
 
