--- a/tiny_mrp/mrp/templates/mrp/purchase/partialPurchaseList.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/partialPurchaseList.html
@@ -28,11 +28,11 @@
                                                 <i class="fa fa-ellipsis-v"></i>
                                             </a>
                                             <div class="dropdown-menu dropdown-menu-right">
-                                                <a class="dropdown-item" href="#">پاسخ</a>
+                                                <!-- <a class="dropdown-item" href="#">پاسخ</a>
                                                 <a class="dropdown-item" href="#">محبوب</a>
-                                                <a class="dropdown-item" href="#">برچسب</a>
+                                                <a class="dropdown-item" href="#">برچسب</a> -->
                                                 <div class="dropdown-divider"></div>
-                                                <a class="dropdown-item text-danger" href="#">حذف</a>
+                                                <a class="dropdown-item text-danger delete-purchase-request" data-url="{% url 'delete_purchase_request' i.id %}" href="#">حذف</a>
                                             </div>
                                         </div>
                                     </div>
