--- a/tiny_mrp/mrp/templates/mrp/purchase/updateReq.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/updateReq.html
@@ -10,14 +10,8 @@
     </div>
     <div class="app-detail-action-right">
         <div>
-            <a href="#" class="btn btn-outline-light" data-toggle="tooltip" title="پاسخ">
-                <i data-feather="corner-up-left"></i>
-            </a>
-            <a href="#" class="btn btn-outline-light ml-2" data-toggle="tooltip"
-            title="اسپم">
-             <i data-feather="info"></i>
-         </a>
-            <a href="#" class="btn btn-outline-light ml-2" data-toggle="tooltip"
+           
+            <a href="#" class="btn btn-outline-light ml-2 delete-purchase-request" data-url="{% url 'delete_purchase_request' company.id %}" data-toggle="tooltip"
                title="رد کردن">
                 <i data-feather="trash"></i>
             </a>
