--- a/tiny_mrp/mrp/templates/mrp/purchase/updateReq.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/updateReq.html
@@ -5,7 +5,7 @@
         </a>
         <h5 class="mb-0">
             درخواست
-            <span class="badge bg-warning badge-pill ml-1">پیش نویس</span>
+            <span class="badge bg-{{company.get_purchase_status_color}} badge-pill ml-1">{{company.status}}</span>
         </h5>
     </div>
     <div class="app-detail-action-right">
