--- a/tiny_mrp/mrp/templates/mrp/purchase/purchaseList.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/purchaseList.html
@@ -17,7 +17,7 @@
                             درون ریزی                 </button>
                        
                 </div>
-                {% comment %} <div class="app-sidebar-menu">
+                <div class="app-sidebar-menu">
                     <div class="list-group list-group-flush">
                         <a href="#" class="list-group-item active d-flex align-items-center">
                             <i data-feather="mail" class="mr-2 width-15 height-15"></i>
@@ -73,7 +73,7 @@
                             کدزدن
                         </a>
                     </div>
-                </div> {% endcomment %}
+                </div> 
             </div>
         </div>
         <div class="col-md-9 app-content">
@@ -117,27 +117,43 @@
                         </a>
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="جستجوی درخواست"
-                                   aria-describedby="button-addon1">
+                                   aria-describedby="button-addon1"  name="q" 
+                                   value="{{ search_query }}">
                             <div class="input-group-append">
-                                <button class="btn btn-outline-light" type="button" id="button-addon1">
+                                <button class="btn btn-outline-light" type="submit" id="button-addon1">
                                     <i class="ti-search"></i>
                                 </button>
                             </div>
                         </div>
                     </form>
                     <div class="app-pager d-flex align-items-center">
-                        <div class="mr-3">1-50 از 253</div>
+                        <div class="mr-3">{{ req.number }} از {{req.paginator.num_pages}}</div>
                         <nav aria-label="Page navigation example">
                             <ul class="pagination">
                                 <li class="page-item">
-                                    <a class="page-link" href="#" aria-label="Previous">
+                                {% if req.has_previous %}
+
+                                    <a class="page-link" href="?page={{ req.previous_page_number }}" aria-label="Previous">
                                         <i data-feather="chevron-left" class="width-15 height-15"></i>
                                     </a>
+                                {% else %}
+                                <a class="page-link" href="#" aria-label="Previous">
+                                    <i data-feather="chevron-left" class="width-15 height-15"></i>
+                                </a>
+                                {% endif %}
+
                                 </li>
                                 <li class="page-item">
+                                    {% if req.has_next %}
+                                    <a class="page-link" href="?page={{ req.next_page_number }}" aria-label="Next">
+                                        <i data-feather="chevron-right" class="width-15 height-15"></i>
+                                    </a>
+                                    {% else %}
                                     <a class="page-link" href="#" aria-label="Next">
                                         <i data-feather="chevron-right" class="width-15 height-15"></i>
                                     </a>
+
+                                    {% endif %}
                                 </li>
                             </ul>
                         </nav>
