--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -69,6 +69,11 @@
         </a>
       </li>
       <li>
+        <a href="#" data-toggle="tooltip" data-placement="right" title="بازرگانی" data-nav-target="#apps4">
+          <i data-feather="shopping-cart"></i>
+        </a>
+      </li>
+      <li>
         <a href="#" data-toggle="tooltip" data-placement="right" title="گزارش" data-nav-target="#apps3">
           <i data-feather="layers"></i>
         </a>
@@ -164,6 +169,21 @@
 
         </a>
       </li>
+   
+      
+
+    </ul>
+  </div>
+  <div id="apps4">
+    <ul>
+      <li class="navigation-divider">بازرگانی</li>
+      <li>
+        <a href="{% url 'list_purchase_req' %}">
+          <span>خرید</span>
+
+        </a>
+      </li>
+
    
       
 
