--- a/tiny_mrp/mrp/templates/mrp/purchase/createReq.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/createReq.html
@@ -29,18 +29,19 @@
 <div class="app-detail-article">
     <div class="card-body">
      {% include 'mrp/purchase/purchase.html' %}
+     
+     {% if request.user.is_superuser %}
      <div class="row">
-        <div class="col-md-6">
-            درخواست دهنده
-            <select class="form-control" name="requested_user" id="requested_user">
-                {% for i in users %}
-                <option value="{{i.id}}">{{i}}</option>
-
-                {% endfor %}
-
-            </select>
-        </div>
+         <div class="col-md-6">
+             درخواست دهنده
+             <select class="form-control" name="requested_user" id="requested_user">
+                 {% for i in users %}
+                     <option value="{{ i.id }}">{{ i }}</option>
+                 {% endfor %}
+             </select>
+         </div>
      </div>
+ {% endif %}
     </div>
     <hr class="m-0">
     
