--- a/tiny_mrp/mrp/templates/mrp/purchase/updateReq.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/updateReq.html
@@ -39,7 +39,8 @@
             </span>
             </div>
             <button class="btn btn-primary" id="saveButton">
-                <i data-feather="send" class="mr-2"></i>بروزرسانی</button>
+                <i data-feather="send" class="mr-2"></i>بروزرسانی
+            </button>
         </div>
     </div>
 </div>
