--- a/tiny_mrp/mrp/templates/mrp/purchase/createReq.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/createReq.html
@@ -48,19 +48,20 @@
     <hr class="m-0">
     <div class="card-body">
         <h6 class="mb-3 font-size-11 text-uppercase">پاسخ</h6>
-        <div class="reply-email-quill-editor mb-3"></div>
-        <div class="d-flex justify-content-between">
-            <div class="reply-email-quill-toolbar">
-            <span class="ql-formats mr-0">
-              <button class="ql-bold"></button>
-              <button class="ql-italic"></button>
-              <button class="ql-underline"></button>
-              <button class="ql-link"></button>
-              <button class="ql-image"></button>
-            </span>
+        <form id="image-upload-form">
+            <div id="image-container" class="mb-3">
+              <!-- Dynamic image input fields will be added here -->
             </div>
-            <button class="btn btn-primary" id="saveButton">
-                <i data-feather="send" class="mr-2"></i>ارسال</button>
-        </div>
+            <div class="d-flex justify-content-between">
+              <button type="button" id="add-image-btn" class="btn btn-secondary">
+                <i class="fas fa-plus mr-2"></i>افزودن تصویر
+              </button>
+              <button type="button" class="btn btn-primary" id="saveButton">
+                <i data-feather="send" class="mr-2"></i>ارسال
+              </button>
+            
+            </div>
+          </form>
     </div>
+    
 </div>
