--- a/tiny_mrp/mrp/templates/mrp/purchase/createReq.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/createReq.html
@@ -48,7 +48,7 @@
     <hr class="m-0">
     <div class="card-body">
         <h6 class="mb-3 font-size-11 text-uppercase">پاسخ</h6>
-        <form id="image-upload-form">
+        <form id="image-upload-form" method="post" enctype="multipart/form-data">
             <div id="image-container" class="mb-3">
               <!-- Dynamic image input fields will be added here -->
             </div>
