--- a/tiny_mrp/mrp/templates/mrp/menu.html
+++ b/tiny_mrp/mrp/templates/mrp/menu.html
@@ -179,7 +179,7 @@
       <li class="navigation-divider">بازرگانی</li>
       <li>
         <a href="{% url 'list_purchase_req' %}">
-          <span>خرید</span>
+          <span>درخواست</span>
 
         </a>
       </li>
