--- a/tiny_mrp/mrp/templates/mrp/purchase/updateReq.html
+++ b/tiny_mrp/mrp/templates/mrp/purchase/updateReq.html
@@ -10,7 +10,13 @@
     </div>
     <div class="app-detail-action-right">
         <div>
-           
+            {% if company.is_emergency %}
+            <a href="#" class="btn btn-danger ml-2" data-toggle="tooltip"
+               title="اورژانسی">
+                <i data-feather="alert-triangle"></i>
+            </a> 
+            {% endif %}
+          
             <a href="#" class="btn btn-outline-light ml-2 delete-purchase-request" data-url="{% url 'delete_purchase_request' company.id %}" data-toggle="tooltip"
                title="رد کردن">
                 <i data-feather="trash"></i>
@@ -22,25 +28,40 @@
     <div class="card-body">
      {% include 'mrp/purchase/purchase.html' %}
     </div>
+    {% if files %}
     <hr class="m-0">
+    <div class="card-body">
+        <h6 class="mb-3 font-size-11 text-uppercase">فایلهای پیوست شده</h6>
+        <ul class="list-unstyled mb-0">
+            {% for i in files %}
+            <li class="small">
+                <a target="_blank" href="{{i.file.url}}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-paperclip mr-1 width-15 height-15"><path d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"></path></svg>
+                   {{i}}
+                </a>
+            </li>
+            {% endfor %}
+            
+        </ul>
+    </div>
+    {% endif %}
     
     <hr class="m-0">
     <div class="card-body">
         <h6 class="mb-3 font-size-11 text-uppercase">پاسخ</h6>
-        <div class="reply-email-quill-editor mb-3"></div>
-        <div class="d-flex justify-content-between">
-            <div class="reply-email-quill-toolbar">
-            <span class="ql-formats mr-0">
-              <button class="ql-bold"></button>
-              <button class="ql-italic"></button>
-              <button class="ql-underline"></button>
-              <button class="ql-link"></button>
-              <button class="ql-image"></button>
-            </span>
+        <form id="image-upload-form" method="post" enctype="multipart/form-data">
+            <div id="image-container" class="mb-3">
+              <!-- Dynamic image input fields will be added here -->
             </div>
-            <button class="btn btn-primary" id="saveButton">
-                <i data-feather="send" class="mr-2"></i>بروزرسانی
-            </button>
-        </div>
+            <div class="d-flex justify-content-between">
+              <button type="button" id="add-image-btn" class="btn btn-secondary">
+                <i class="fas fa-plus mr-2"></i>افزودن تصویر
+              </button>
+              <button type="button" class="btn btn-primary" id="saveButton">
+                <i data-feather="send" class="mr-2"></i>ارسال
+              </button>
+            
+            </div>
+          </form>
     </div>
 </div>
